fixed map alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,11 @@ html, body {
     width: 50%;
 }
 
+.col-md {
+    width: 58.33333333%;
+    float: right;
+}
+
 item active{
     max-width:100%;
     max-height:100%;
